# 4IZ553-Project

./: LICENCE  README.md
be/: .gitignore  README.md  cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
be/be/: config.py  main.py  neo.py  osm.py  utils.py
be/be/api/: deps.py
be/be/api/api_v1/: api.py
be/be/api/api_v1/endpoints/: address.py  poi.py
be/be/exc/: api.py  handlers.py
be/be/schemas/: base.py  http.py  routing.py
be/scripts/: api.sh  db.init.sh  download.sh  export-reqs.sh
fe/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
fe/src/: App.svelte  api.ts
fe/src/lib/components/: RouteSearch.svelte  RouteSearchInput.svelte
