[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["bihd00 <bihany.daniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.16.0"
lxml = "^5.1.0"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}


[tool.poetry.group.dev.dependencies]
osmnx = "^1.8.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
